# autocv

./: .buildinfo  .gitignore  AGENTS.md  README.md  autocv.autocv.html  autocv.core.input.html  autocv.core.vision.html  autocv.core.window_capture.html  autocv.models.html  autocv.tools.html  autocv.utils.html  cv2.pyi  genindex.html  index.html  main.py  noxfile.py  objects.inv  paddleocr.pyi  py-modindex.html  pyproject.toml  search.html  searchindex.js  sv_ttk.pyi  test.py
.doctrees/: autocv.autocv.doctree  autocv.core.input.doctree  autocv.core.vision.doctree  autocv.core.window_capture.doctree  autocv.models.doctree  autocv.tools.doctree  autocv.utils.doctree  environment.pickle  index.doctree
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  docs.yml  lint.yml  merge_dependabot.yml
_modules/: index.html
_modules/autocv/: auto_color_aid.html  autocv.html  color_picker.html  image_filter.html  image_picker.html
_modules/autocv/core/: input.html  vision.html  window_capture.html
_modules/autocv/models/: circle.html  color.html  color_with_point.html  contour.html  exceptions.html  filter_settings.html  point.html  rectangle.html  shape_list.html  text_info.html
_modules/autocv/utils/: filtering.html  geometry.html
_sources/: autocv.core.vision.rst.txt  autocv.models.rst.txt  autocv.tools.rst.txt  autocv.utils.rst.txt  index.rst.txt
autocv/: __init__.py  __init__.pyi  __main__.py  _about.py  antigcp.cp311-win_amd64.pyd  antigcp.pyi  auto_color_aid.py  autocv.py  autocv.pyi  cli.py  color_picker.py  constants.py  image_filter.py  image_picker.py
autocv/core/: __init__.py  __init__.pyi  decorators.py  decorators.pyi  image_processing.py  input.py  input.pyi  vision.py  vision.pyi  window_capture.py
autocv/models/: __init__.py  __init__.pyi  circle.py  color.py  color_with_point.py  contour.py  exceptions.py  filter_settings.py  point.py  rectangle.py  shape_list.py  text_info.py
autocv/prebuilt/python310/: antigcp.cp310-win_amd64.pyd
autocv/prebuilt/python311/: antigcp.cp311-win_amd64.pyd
autocv/prebuilt/python312/: antigcp.cp312-win_amd64.pyd
autocv/prebuilt/python313/: antigcp.cp313-win_amd64.pyd
autocv/utils/: __init__.py  __init__.pyi  filtering.py  geometry.py
docs/: autocv.autocv.rst  autocv.core.input.rst  autocv.core.window_capture.rst  autocv.models.rst  autocv.tools.rst  autocv.utils.rst  conf.py  index.rst
pipelines/: audit.nox.py  codespell.nox.py  config.py  format.nox.py  mypy.nox.py  nox.py  nox.pyi  pyright.nox.py  pytest.nox.py  ruff.nox.py  sphinx.nox.py  stubs.nox.py  ty.nox.py  utils.nox.py
scripts/: install_ocr.py  windows_smoke_test.py
scripts/ci/: normalize_coverage.py
source/: autocv.core.rst  autocv.models.rst  autocv.utils.rst  conf.py  index.rst
tests/: __init__.py
tests/autocv/: test_auto_color_aid.py  test_auto_color_aid_app.py  test_auto_color_aid_controller.py  test_autocv.py  test_cli.py  test_color_picker.py  test_decorators.py  test_exceptions.py  test_filtering.py  test_geometry.py  test_image_filter.py  test_image_picker.py  test_image_processing.py  test_input.py  test_models.py  test_package_init.py  test_vision.py  test_vision_processing.py  test_window_capture.py  test_window_capture_core.py
tests/scripts/: test_install_ocr.py
