[build-system]
requires = ["hatchling >= 1.28"]
build-backend = "hatchling.build"

[project]
name = "autocv"
version = "1.0"
description = "Computer vision library."
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy >=2.2,<2.3",
    "opencv-python >=4.12,<5",
    "pillow>=12.0,<13",
    "paddleocr>=3.3,<4",
    "pywin32 >=311,<312; sys_platform == 'win32'",
    "sv-ttk >=2.6,<3",
    "typing-extensions >=4.15,<5",
]
scripts = { "autocv" = "autocv.cli:main" }

license = "MIT"
readme = "README.md"
authors = [{ name = "Zach Mohan" }]
maintainers = [{ name = "devzach", email = "dev.zach@gmail.com" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
# Choose one PaddlePaddle backend:
paddle-cpu = ["paddlepaddle>=3.2,<4"]
paddle-gpu = ["paddlepaddle-gpu>=3.2,<4; sys_platform == 'win32' and platform_machine == 'AMD64'"]

# NVIDIA-specific Windows GPU dev wheels (resolved via [tool.uv.sources] below)
paddle-gpu-nvidia = ["paddlepaddle-gpu==3.0.0.dev20250717; sys_platform == 'win32' and platform_machine == 'AMD64'" ]

[project.urls]
"Documentation" = "https://mohanz1.github.io/autocv/"
"Source (GitHub)" = "https://github.com/mohanz1/autocv"
"Discord" = "https://discord.gg/Jx4cNGG"
"Issue Tracker" = "https://github.com/mohanz1/autocv/issues"
"CI" = "https://github.com/mohanz1/autocv/actions"

[dependency-groups]
nox = ["nox[uv] >=2025.11,<2026"]

audit = ["uv-secure"]
codespell = ["codespell >=2.4.1,<3"]
coverage = ["coverage[toml] >=7.13,<8"]
sphinx = [
    "furo >=2025.9,<2026",
    "sphinx >=8.2,<9; python_version>='3.11'",
    "sphinx-copybutton >=0.5,<1",
]

mypy = ["mypy[faster-cache] >=1.19,<2", { include-group = "types" }]
pyright = ["pyright >=1.1,<2", { include-group = "types" }]
pytest = [
    "mock >=5.2,<6",
    "pytest >=9.0,<10",
    "pytest-cov >=7.0,<8",
    "pytest-xdist >=3.8,<4",
    { include-group = "coverage" },
]
ruff = ["ruff >=0.14,<1"]
types = [
    "types-Pillow >=10.2,<11",
    "types_pywin32 >=311,<313",
]

[tool.uv]
required-version = ">=0.9,<1"

[tool.uv.sources]
# NVIDIA dev wheels for paddlepaddle-gpu, selected by Python version
paddlepaddle-gpu = [
  { url = "https://paddle-qa.bj.bcebos.com/paddle-pipeline/Develop-TagBuild-Training-Windows-Gpu-Cuda12.9-Cudnn9.9-Trt10.5-Mkl-Avx-VS2019-SelfBuiltPypiUse/86d658f56ebf3a5a7b2b33ace48f22d10680d311/paddlepaddle_gpu-3.0.0.dev20250717-cp310-cp310-win_amd64.whl", marker = "python_version >= '3.10' and python_version < '3.11' and sys_platform == 'win32' and platform_machine == 'AMD64'" },
  { url = "https://paddle-qa.bj.bcebos.com/paddle-pipeline/Develop-TagBuild-Training-Windows-Gpu-Cuda12.9-Cudnn9.9-Trt10.5-Mkl-Avx-VS2019-SelfBuiltPypiUse/86d658f56ebf3a5a7b2b33ace48f22d10680d311/paddlepaddle_gpu-3.0.0.dev20250717-cp311-cp311-win_amd64.whl", marker = "python_version >= '3.11' and python_version < '3.12' and sys_platform == 'win32' and platform_machine == 'AMD64'" },
  { url = "https://paddle-qa.bj.bcebos.com/paddle-pipeline/Develop-TagBuild-Training-Windows-Gpu-Cuda12.9-Cudnn9.9-Trt10.5-Mkl-Avx-VS2019-SelfBuiltPypiUse/86d658f56ebf3a5a7b2b33ace48f22d10680d311/paddlepaddle_gpu-3.0.0.dev20250717-cp312-cp312-win_amd64.whl", marker = "python_version >= '3.12' and python_version < '3.13' and sys_platform == 'win32' and platform_machine == 'AMD64'" },
]

[tool.coverage.run]
relative_files = true
parallel = true
branch = true
timid = false
source = ["autocv"]
omit = ["autocv/__main__.py", "autocv/cli.py"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
sort = "cover"
exclude_lines = [
    "\\#\\s*pragma: no cover$",
    "^\\s*raise AssertionError$",
    "^\\s*raise NotImplementedError$",
    "^\\s*return NotImplemented$",
    "^\\s*raise$",
    "^\\s*pass$",
    "^if __name__ == ['\"]__main__['\"]:$",
    "^\\s*\\.\\.\\.$",
    "^\\s*@abc.abstractmethod$",
    "^\\s*@typing.overload$",
    "^\\s*if TYPE_CHECKING:$",
    "^\\s*if not TYPE_CHECKING:$",
    "^\\s*if typing.TYPE_CHECKING:$",
    "^\\s*if not typing.TYPE_CHECKING:$",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "S101",
    "COM812",
    "TRY003",
    "D105",
    "SIM105",
    "SIM110",
    "A002",
    "FBT003",
]

[tool.ruff.lint.per-file-ignores]
"autocv/**/__init__.py" = [
    "F401",
    "F403",
]
"tests/**/*.py" = [
    "D",
    "S105",
    "S106",
    "PLR2004",
    "SLF001",
    "ALL",
]
"scripts/**/*.py" = [
    "D",
    "INP001",
    "T201",
    "S602",
]
"pipelines/**/*.py" = [
    "INP001",
    "D100",
]
"docs/**/*.py" = [
    "ALL",
]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 20

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.pyright]
include = ["autocv"]
exclude = [
    "**/__init__.py",
]
pythonVersion = "3.10"
typeCheckingMode = "strict"

reportUnnecessaryTypeIgnoreComment = "error"
reportMissingTypeStubs = "none"
reportImportCycles = "none"
reportIncompatibleMethodOverride = "none"
reportOverlappingOverload = "none"
reportIncompatibleVariableOverride = "none"

reportUnknownMemberType = "warning"
reportUntypedFunctionDecorator = "warning"
reportOptionalMemberAccess = "warning"

[tool.pytest.ini_options]
xfail_strict = true
norecursedirs = [
    "docs",
    "*.egg-info",
    ".git",
    "tasks",
    ".nox",
    ".pytest",
    ".pytest_cache",
    ".venv",
    "venv",
    "public",
    "ci",
]
filterwarnings = [
    "error",
    "ignore:.*assertions not in test modules or plugins will be ignored .*:pytest.PytestConfigWarning",
    "ignore:could not create cache path.*:pytest.PytestCacheWarning",
]
cache_dir = ".pytest/cache"

[tool.mypy]
strict = true
check_untyped_defs = true
enable_error_code = "explicit-override"
incremental = true
namespace_packages = true
no_implicit_optional = true
pretty = true
python_version = "3.10"
show_column_numbers = true
show_error_codes = true
show_error_context = true

allow_untyped_globals = false
allow_redefinition = true

disallow_untyped_decorators = true
disallow_incomplete_defs = true
disallow_untyped_defs = true

warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
