[build-system]
requires = ["hatchling>=1.28"]
build-backend = "hatchling.build"

[project]
name = "autocv"
version = "1.1.0"
description = "Windows-first computer vision automation toolkit."
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy>=2.2,<3",
    "opencv-python>=4.12,<4.13",
    "pillow>=12.0,<13",
    "pywin32>=311,<312; sys_platform == 'win32'",
    "typing-extensions>=4.15,<5",
]
scripts = { autocv = "autocv.cli:main" }
license = "MIT"
readme = "README.md"
authors = [{ name = "Zach Mohan" }]
maintainers = [{ name = "devzach", email = "dev.zach@gmail.com" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
gui = ["sv-ttk>=2.6,<3"]
ocr = ["paddleocr>=3.3,<4"]
paddle-cpu = ["paddleocr>=3.3,<4", "paddlepaddle>=3.2,<4"]
paddle-gpu = [
    "paddleocr>=3.3,<4",
    "paddlepaddle-gpu>=3.2,<4; sys_platform == 'win32' and platform_machine == 'AMD64'",
]
paddle-gpu-nvidia = [
    "paddleocr>=3.3,<4",
    "paddlepaddle-gpu==3.0.0.dev20250717; sys_platform == 'win32' and platform_machine == 'AMD64'",
]

[project.urls]
Documentation = "https://mohanz1.github.io/autocv/"
"Source (GitHub)" = "https://github.com/mohanz1/autocv"
Discord = "https://discord.gg/Jx4cNGG"
"Issue Tracker" = "https://github.com/mohanz1/autocv/issues"
CI = "https://github.com/mohanz1/autocv/actions"

[dependency-groups]
dev = [{ include-group = "test" }, { include-group = "lint" }, { include-group = "type" }, { include-group = "docs" }]
docs = [
    "furo>=2025.9,<2026",
    "sphinx>=8.2,<9",
    "sphinx-copybutton>=0.5,<1",
]
lint = ["ruff>=0.15,<1"]
test = [
    "coverage[toml]>=7.13,<8",
    "pytest>=9.0,<10",
    "pytest-cov>=7.0,<8",
    "pytest-xdist>=3.8,<4",
]
type = [
    "mypy>=1.18,<2",
    "types-pillow>=10.2,<11",
    "types-pywin32>=311,<313",
]

[tool.uv]
required-version = ">=0.9,<1"

[tool.uv.sources]
# NVIDIA dev wheels for paddlepaddle-gpu, selected by Python version
paddlepaddle-gpu = [
    { url = "https://paddle-qa.bj.bcebos.com/paddle-pipeline/Develop-TagBuild-Training-Windows-Gpu-Cuda12.9-Cudnn9.9-Trt10.5-Mkl-Avx-VS2019-SelfBuiltPypiUse/86d658f56ebf3a5a7b2b33ace48f22d10680d311/paddlepaddle_gpu-3.0.0.dev20250717-cp311-cp311-win_amd64.whl", marker = "python_version >= '3.11' and python_version < '3.12' and sys_platform == 'win32' and platform_machine == 'AMD64'" },
    { url = "https://paddle-qa.bj.bcebos.com/paddle-pipeline/Develop-TagBuild-Training-Windows-Gpu-Cuda12.9-Cudnn9.9-Trt10.5-Mkl-Avx-VS2019-SelfBuiltPypiUse/86d658f56ebf3a5a7b2b33ace48f22d10680d311/paddlepaddle_gpu-3.0.0.dev20250717-cp312-cp312-win_amd64.whl", marker = "python_version >= '3.12' and python_version < '3.13' and sys_platform == 'win32' and platform_machine == 'AMD64'" },
]

[tool.coverage.run]
relative_files = true
parallel = true
branch = true
source = ["autocv"]
omit = ["autocv/__main__.py"]

[tool.coverage.report]
precision = 2
show_missing = true
sort = "cover"
exclude_lines = [
    "\\#\\s*pragma: no cover$",
    "^\\s*raise AssertionError$",
    "^\\s*raise NotImplementedError$",
    "^\\s*return NotImplemented$",
    "^\\s*raise$",
    "^\\s*pass$",
    "^if __name__ == ['\"]__main__['\"]:$",
    "^\\s*\\.\\.\\.$",
    "^\\s*@abc.abstractmethod$",
    "^\\s*@typing.overload$",
    "^\\s*if TYPE_CHECKING:$",
    "^\\s*if not TYPE_CHECKING:$",
    "^\\s*if typing.TYPE_CHECKING:$",
    "^\\s*if not typing.TYPE_CHECKING:$",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "S101",
    "COM812",
    "TRY003",
    "D105",
    "SIM105",
    "SIM110",
    "A002",
    "FBT003",
]

[tool.ruff.lint.per-file-ignores]
"autocv/**/__init__.py" = ["F401", "F403"]
"tests/**/*.py" = ["D", "S105", "S106", "PLR2004", "SLF001", "ALL"]
"scripts/**/*.py" = ["D", "INP001", "T201", "S602"]
"docs/**/*.py" = ["ALL"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 20

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]
xfail_strict = true
norecursedirs = [
    "docs",
    "*.egg-info",
    ".git",
    ".nox",
    ".pytest",
    ".pytest_cache",
    ".uv-cache",
    ".venv",
    "venv",
    "public",
]
filterwarnings = [
    "error",
    "ignore:.*assertions not in test modules or plugins will be ignored .*:pytest.PytestConfigWarning",
    "ignore:could not create cache path.*:pytest.PytestCacheWarning",
]
cache_dir = ".pytest/cache"

[tool.mypy]
python_version = "3.11"
files = ["autocv"]
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "PIL.ImageTk",
    "antigcp",
    "cv2",
    "paddleocr",
    "sv_ttk",
    "win32api",
    "win32con",
    "win32gui",
    "win32ui",
]
ignore_missing_imports = true
